react only tunes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="build/Song.js"></script>
     <script src="build/Library.js"></script>
     <script src="build/SongQueue.js"></script>
+    <script src="build/Player.js"></script>
     <script src="build/reactApp.js"></script>
   </body>
 </html>
